# LLM-Failure-Debugger

./: CODE_EXECUTION_FLOW.md  README.md  pyproject.toml
examples/: anthropic.py  any_llm.py  huggingface.py  ollama.py  openai.py
llm_failure_debugger/: __init__.py  type_definitions.py
llm_failure_debugger/adapters/: __init__.py  anthropic_adapter.py  base.py  custom_adapter.py  factory.py  huggingface_adapter.py  ollama_adapter.py  openai_adapter.py
llm_failure_debugger/analysis/: __init__.py  causal_graph.py  mechanism.py  recommendations.py  root_cause.py
llm_failure_debugger/core/: __init__.py  attention_localization.py  causal_model.py  debugger.py  inference.py  precheck.py  signals.py
llm_failure_debugger/evaluation/: __init__.py  benchmark.py  metrics.py
llm_failure_debugger/tracking/: __init__.py  active_learning.py  tracker.py
llm_failure_debugger/training/: intervention.py
llm_failure_debugger/utils/: __init__.py  repair.py
