[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-failure-debugger"
version = "0.1.0"
description = "Diagnose, explain, and fix LLM failures"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
dependencies = [
    "requests"
]

[project.optional-dependencies]
openai = ["openai"]
anthropic = ["anthropic"]
torch = ["torch"]

[tool.setuptools.packages.find]
where = ["."]
